# eugloh-machine-learning-handbook

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: publish-slides.yml
notebooks/00/: intro.ipynb  intro.py
notebooks/01/: classification_iris_exercise.ipynb  classification_synthetic_exercise.ipynb  linear_logistic_regression.py  regression_california_exercise.ipynb  regression_synthetic_exercise.ipynb
